--- a/src/styles/quasar.variables.scss
+++ b/src/styles/quasar.variables.scss
@@ -1,7 +1,7 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   : #027BE3;
+$primary   : #753337;
 $secondary : #26A69A;
 $accent    : #9C27B0;
 
@@ -12,4 +12,5 @@ $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
 
-//@import '~quasar-variables-styl'
+//noinspection CssUnknownTarget
+@import '~quasar-variables-styl';
